@@ -1,8 +1,26 @@
+from mock import patch
 from unittest import TestCase
 
 
+class MockConfig(object):
+    def __init__(self):
+        self.develop = {}
+
+    def save(self):
+        pass
+
+
 class MockDevelop(object):
-    pass
+    def __init__(self):
+        from mr.developer.develop import ArgumentParser
+        self.config = MockConfig()
+        self.parser = ArgumentParser()
+        self.parsers = self.parser.add_subparsers(title="commands", metavar="")
+
+
+class MockSource(dict):
+    def exists(self):
+        return getattr(self, '_exists', True)
 
 
 class TestCommand(TestCase):
@@ -72,3 +90,53 @@ class TestCommand(TestCase):
         pkgs = Command(self.develop).get_packages(['ha', 'ba'],
                                                   auto_checkout=True)
         self.assertEquals(pkgs, set(['ham']))
+
+
+class TestDeactivateCommand(TestCase):
+    def setUp(self):
+        from mr.developer.develop import CmdDeactivate
+        self.develop = MockDevelop()
+        self.develop.sources = dict(
+            foo=MockSource(),
+            bar=MockSource(),
+            baz=MockSource(),
+            ham=MockSource())
+        self.develop.auto_checkout = set(['foo', 'ham'])
+        self.develop.config.develop['foo'] = 'auto'
+        self.develop.config.develop['ham'] = 'auto'
+        self.cmd = CmdDeactivate(self.develop)
+
+    def testDeactivateDeactivatedPackage(self):
+        self.develop.config.develop['bar'] = False
+        args = self.develop.parser.parse_args(args=['deactivate', 'bar'])
+        with patch('mr.developer.develop.logger') as logger:
+            self.cmd(args)
+        assert self.develop.config.develop == dict(
+            bar=False,
+            foo='auto',
+            ham='auto')
+        assert logger.mock_calls == []
+
+    def testDeactivateActivatedPackage(self):
+        self.develop.config.develop['bar'] = True
+        args = self.develop.parser.parse_args(args=['deactivate', 'bar'])
+        with patch('mr.developer.develop.logger') as logger:
+            self.cmd(args)
+        assert self.develop.config.develop == dict(
+            bar=False,
+            foo='auto',
+            ham='auto')
+        assert logger.mock_calls == [
+            ('info', ("Deactivated 'bar'.",), {}),
+            ('warn', ("Don't forget to run buildout again, so the deactived packages are actually not used anymore.",), {})]
+
+    def testDeactivateAutoCheckoutPackage(self):
+        args = self.develop.parser.parse_args(args=['deactivate', 'foo'])
+        with patch('mr.developer.develop.logger') as logger:
+            self.cmd(args)
+        assert self.develop.config.develop == dict(
+            foo=False,
+            ham='auto')
+        assert logger.mock_calls == [
+            ('info', ("Deactivated 'foo'.",), {}),
+            ('warn', ("Don't forget to run buildout again, so the deactived packages are actually not used anymore.",), {})]
